<resources>
    <string name="app_name" translatable="false">MP Manager</string>
    <string name="success_saved">File saved successfully to %s</string>
    <string name="enable_logs" >Save logs</string>
    <string name="sign_apk_after_merge">Sign the APK after merging</string>
    <string name="signing">Signing %1$s</string>
    <string name="saving">Saving…</string>
    <string name="saving_x">Saving %1$s…</string>
    <string name="searching">Searching files…</string>
    <string name="select">Select</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="warning">Warning</string>
    <string name="copy_log">Copy log</string>
    <string name="app_icon_list_label">App icon</string>
    <string name="show_icons">Show icons in app list</string>
    <string name="merge_splits">Merge/AntiSplit split apps by default</string>
    <string name="show_last_updated">Show last updated date</string>
    <string name="show_first_install">Show first installed date</string>
    <string name="show_pkg">Show package name</string>
    <string name="show_app">Show app name</string>
    <string name="show_v_code">Show version code</string>
    <string name="show_v_name">Show version name</string>
    <string name="filter">Filter</string>
    <string name="warn_sign">After merging, the original signature of an APK will be invalid and it must be signed in order to install it. This will break updating the app from official sources. Some apps verify the signature of the APK or take other measures to check if the app was modified, which may cause it to crash on startup.</string>
    <string name="user_apps">User apps</string>
    <string name="system_apps">System apps</string>
    <string name="share_apk">Share APK</string>
    <string name="display_nfo">Display information</string>
    <string name="display_functions">Display functions</string>
    <string name="confirm">Confirm</string>
    <string name="black_theme">Black theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="system_theme">System theme</string>
    <string name="func">Functionality</string>
    <string name="pkg_name_save">Save files with package name instead of app name</string>
    <string name="split">Split</string>
    <string name="adding">Adding %1$s</string>
    <string name="adding_to">Adding %1$s to %2$s</string>
    <string name="extracting">Extracting %1$s</string>
    <string name="extracting_to">Extracting %1$s to %2$s</string>
    <string name="android_ver_text">%1$s (SDK %2$d)</string>
    <string name="menu">menu\n</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="file_options">File Options</string>
    <string name="public_xml">(optional) Select resource ids XML file (public.xml)</string>
    <string name="clean_meta">Cleans META-INF directory along with signature block</string>
    <string name="fix_types">Correct resource type names based on usages and values</string>
    <string name="force_delete_output_path">Force delete output path</string>
    <string name="skip_manifest_protection">Skip Manifest Protection</string>
    <string name="confuse_zip_structure">Confuse Zip Structure</string>
    <string name="dex_protection_level">Dex Protection Level</string>
    <string name="copying">"Copying %1$s"</string>
    <string name="enter_name_for_copy">Enter new name for copy</string>
    <string name="signing_">signing %1$s</string>
    <string name="signed">Signed %1$s</string>
    <string name="deleting">Deleting %1$s</string>
    <string name="compressing">Compressing</string>
    <string name="compress">Compress</string>
    <string name="hist">Search History</string>
    <string name="filename">File name</string>
    <string name="install_location">Install Location</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>
    <string name="minimum_android_version">Minimum Android Version</string>
    <string name="change_app_launcher_icon">Change App Launcher Icon</string>
    <string name="appname">App Name</string>
    <string name="edit_all_ac">Edit All Activities / Properties From Manifest</string>
    <string name="auto_sign">Auto Sign</string>
    <string name="sign_set">Sign Settings</string>
    <string name="target_android_version">Target Android Version</string>
    <string name="compression_level">Compression Level</string>
    <string name="compress_level_no_compression">Store only (no compression)</string>
    <string name="compress_level_fastest">Fastest</string>
    <string name="compress_level_faster">Faster</string>
    <string name="compress_level_fast">Fast</string>
    <string name="compress_level_medium_fast">Medium-fast</string>
    <string name="compress_level_normal">Normal</string>
    <string name="compress_level_higher">Higher</string>
    <string name="compress_level_maximum">Maximum</string>
    <string name="compress_level_pre_ultra">Near ultra</string>
    <string name="compress_level_ultra">Ultra</string>
    <string name="update_mode">Update mode</string>
    <string name="replace_all">Replace All</string>
    <string name="update_and_replace">Update and replace</string>
    <string name="skip_all">Skip all</string>
    <string name="output_exists_title">File already exists</string>
    <string name="output_exists_msg">\"%1$s\" already exists.</string>
    <string name="add_to_existing">Add to existing</string>
    <string name="create_new_file">Create new</string>
    <string name="confirm_add_to_zip_f">Are you sure you want to add %1$s to %2$s?</string>
    <string name="plus_n_more">and %1$d more</string>
    <string name="extract">Extract</string>
    <string name="extracting_to_folder">Extracting to %1$s</string>
    <string name="archive_format">Archive format</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="sync">Sync selected pane to unselected pane</string>
    <string name="parent_dir">Parent directory</string>
    <string name="current_folder_path">Current Folder Path</string>
    <string name="more">More</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="newFileOrFolder">New file or folder</string>
    <string name="search_activities">Search activities</string>
    <string name="framework_version">Framework Version</string>
    <string name="protectd">Protected</string>
    <string name="file_modified_x">File %1$s has been modified, do you want to update the %2$s</string>
    <string name="clone">Clone APK</string>
    <string name="pkgName">Package name</string>
    <string name="opt">Optimize APK</string>
    <string name="delete_useless_files">Delete useless files</string>
    <string name="files_to_delete">Files To Delete</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="plugins_section">Plugins</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_description">A free dual pane, Material Design file manager for Android with focus on APKs and the goal to be an open source alternative to MT Manager.</string>
    <string name="about_by_author">by %1$s</string>
    <string name="about_open_source_projects">Open Source Projects Used</string>
    <string name="about_tap_for_license">Tap a project to view its license and source link</string>
    <string name="go_to">Go To</string>
    <string name="arsc_copy_id">ID</string>
    <string name="arsc_goto_id">Goto ID</string>
    <string name="translate">Translate</string>
    <string name="long_select">Long Select</string>
    <string name="link">Open link</string>
    <string name="comment">Toggle comment</string>
    <string name="share_text">Share text</string>
    <string name="customize">Customize</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="compile">Compile</string>
    <string name="preferences">Preferences</string>
    <string name="compilation_options">Compilation options</string>
    <string name="dex_version">Dex version</string>
    <string name="remove_all_debug_info">Remove all debug info</string>
    <string name="remove_debug_info_source">Remove debug info .source</string>
    <string name="remove_debug_info_line">Remove debug info .line</string>
    <string name="remove_debug_info_param">Remove debug info .param</string>
    <string name="remove_debug_info_prologue">Remove debug info .prologue</string>
    <string name="remove_debug_info_local">Remove debug info .xxx local</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="press_again_msg">Press back again to cancel</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="error">Error</string>
    <string name="error_x">Error: %1$s</string>
    <string name="ip">IP: %1$s</string>
    <string name="copied">Copied</string>
    <string name="ftp">ftp:/%1$s</string>
    <string name="usedpt">%1$d%%</string>
    <string name="used">Used: %1$s Free: %2$s</string>
    <string name="signed_by">Signed By</string>
    <string name="auto_copy">Auto-copy command to clipboard</string>
    <string name="auto_copy_desc">Automatically copy generated command when profile is selected</string>
    <string name="profiles">Profiles</string>
    <string name="add_profile">Add Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="delete_confirm">Are you sure you want to delete profile %1$s?</string>
    <string name="profile_name">Profile Name</string>
    <string name="command_template_hint">Command Template</string>
    <string name="copy_all">Copy All</string>
    <string name="no_profiles">No Profiles</string>
    <string name="no_profiles_msg">Create a profile first to generate commands.</string>
    <string name="use_same_profile">Use same profile for all files</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="command_helper">Command Helper</string>
    <string name="multiple_files">Multiple files selected. Choose generation mode:</string>
    <string name="loading">Loading…</string>
    <string name="enter_path">Enter path</string>
    <string name="path">Path</string>
    <string name="start">Start</string>
    <string name="only_for_this_folder">Only for this folder</string>
    <string name="ftp_server_started">FTP Server started on port %1$d</string>
    <string name="failed_to_start_ftp_server">Failed to start FTP server: %1$s</string>
    <string name="ftp_server_stopped">FTP Server stopped</string>
    <string name="connected_to_ftp">Connected to FTP</string>
    <string name="ftp_connect_failed">FTP Connect Failed: %1$s</string>
    <string name="ftp_security">Security</string>
    <string name="ftp_security_none">FTP (None)</string>
    <string name="dex_global_rename_desc">One rule per line: "pkg &lt;search&gt; &lt;replace&gt;", "type Lcom/a/A; Lcom/b/A;", "field Lcom/a/A;-&gt;name:I newName" or "method Lcom/a/A;-&gt;name()V newName". Add "exact" as a fourth token to keep a package rename from touching its sub-packages. Lines starting with # are ignored.</string>
    <string name="dex_global_rename_hint">pkg com.example com.acme\ntype Lcom/example/A; Lcom/acme/A;\nfield Lcom/example/A;-&gt;count:I total</string>
    <string name="dex_global_rename_inner">Also rename inner classes</string>
    <string name="dex_global_rename_access">Repair member visibility after renaming</string>
</resources>